# mortgage-calculator

./: .gitignore  README.md  app.py  calculator.command  display_helpers.py  exports.py  models.py  mortgage_engine.py  prompt.md  public_warning.py  pyproject.toml  requirements.txt  sample_data.py  scenario_planner.py
tests/: test_app_ui_source.py  test_bank_term.py  test_date_aware_overpayments.py  test_display_helpers.py  test_engine_basic.py  test_exports.py  test_public_warning.py  test_rate_changes.py  test_scenario_planner.py
